# ntpserver

./: ntpserver.py  pyproject.toml
src/ntpserver/: __init__.py
