[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntpserver"
dynamic = ["version"]
description = 'A Python based NTP server'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Vladimir Petrigo", email = "vladimir.petrigo@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vpetrigo/ntpserver#readme"
Issues = "https://github.com/vpetrigo/ntpserver/issues"
Source = "https://github.com/vpetrigo/ntpserver"

[tool.hatch.version]
path = "src/ntpserver/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ntpserver tests}"

[tool.coverage.run]
source_pkgs = ["ntpserver", "tests"]
branch = true
parallel = true
omit = [
  "src/ntpserver/__about__.py",
]

[tool.coverage.paths]
ntpserver = ["src/ntpserver", "*/ntpserver/src/ntpserver"]
tests = ["tests", "*/ntpserver/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
